<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">AFWall+ </string>
    <string name="app_name_donate">AFWall+ (Donate)</string>
    <string name="title_disabled">AFWall+ (DISABLED)</string>
    <string name="whitelist_array_item">Allow selected</string>
    <string name="blacklist_array_item">Block selected</string>
    <string name="showrules">Show rules</string>
    <string name="applyrules">Apply</string>
    <string name="saverules">Save</string>
    <string name="setpwd">Set password</string>
    <string name="help">Help</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="error_purge">Error purging iptables</string>
    <string name="error_binary">Error installing binary files</string>
    <string name="error_migration">Error migrating old settings</string>
    <string name="error_refresh">Error refreshing iptables</string>
    <string name="error_apply">Error applying iptables rules</string>
    <string name="error_fetch">Error fetching iptables rules</string>
    <string name="error_su_toast">Unable to aquire root access !</string>
    <string name="error_su">Could not acquire root access.\nYour device must be rooted to use AFWall+.\n\nIf this device is already rooted, please ensure AFWall+ has permission to execute the \"su\" command.</string>
    <string name="error_netfilter">Could not find support for iptables targets and chains.\nAFWall+ might not work as expected due to this limitation.</string>
    <string name="error_common">Error: </string>
    <string name="all_item">(Any app) - Same as selecting all apps</string>
    <string name="kernel_item">(kernel) - Linux kernel</string>
    <string name="android_system">Android System</string>
    <string name="unknown_item">Unknown</string>
    <string name="tethering_item">(tethering) - DHCP+DNS services</string>
    <string name="dnsproxy_item">(dns proxy) - DNS lookups via netd</string>
    <string name="ntp_item">(ntp) - Internet time servers</string>
    <string name="root_item">(root) - Apps running as root</string>
    <string name="adb_item">(adb) - Android Debug Bridge</string>
    <string name="media_item">(media) - Media server</string>
    <string name="vpn_item">(vpn) - VPN networking</string>
    <string name="drm_item">(drm) - Digital Rights Management service</string>
    <string name="gps_item">(gps) - GPS</string>
    <string name="shell_item">(shell) - Linux shell</string>
    <string name="fw_enabled">Enable firewall</string>
    <string name="fw_disabled">Disable firewall</string>
    <string name="flushed">Rules flushed</string>
    <string name="show_log">View log</string>
    <string name="clear_log">Clear log</string>
    <string name="applying_rules">Applying iptables rules</string>
    <string name="applying">Applying</string>
    <string name="saving_rules">Saving iptables rules</string>
    <string name="rules_applied">Rules applied with success</string>
    <string name="rules_saved">Rules saved</string>
    <string name="rules_deleted">Rules deleted</string>
    <string name="pass_titleset">Set password lock</string>
    <string name="pass_titleget">Password required</string>
    <string name="enterpass">Enter password</string>
    <string name="reenterpass">Confirm password</string>
    <string name="error_write_pref">Error saving preferences</string>
    <string name="enternewpass">Enter new password (leave blank to remove):</string>
    <string name="passdefined">Password lock enabled</string>
    <string name="passremoved">Password lock disabled</string>
    <string name="passerror">Error changing password lock</string>
    <string name="working">Working</string>
    <string name="reading_apps">Retrieving installed apps</string>
    <string name="mode">Firewall Mode</string>
    <string name="mode_header">Mode: %s</string>
    <string name="legend_clear">Clear all checkboxes in all columns</string>
    <string name="mode_whitelist">Allow selected</string>
    <string name="legend_whitelist">Selected apps will be granted Internet access</string>
    <string name="mode_blacklist">Block selected</string>
    <string name="legend_blacklist">Selected apps will be denied Internet access</string>
    <string name="set_custom_script">Set custom script</string>
    <string name="preferences">Preferences</string>
    <string name="reload">Reload apps</string>
    <string name="flush">Flush rules</string>
    <string name="send_report">Send error report</string>
    <string name="enter_problem">Please explain the issue:</string>
    <string name="send_mail">Send e-mail</string>
    <string name="notify_pref_summary_on">A notification will be displayed when a new application is installed</string>
    <string name="notify_pref_summary_off">No notification will be displayed when a new application is installed</string>
    <string name="custom_script_defined">Custom script defined</string>
    <string name="custom_script_removed">Custom script removed</string>
    <string name="custom_script_error">Error saving custom script</string>
    <string name="custom_script_info"><b>Enter custom script below.</b>		\n<i>(Leave blank to remove.)</i>		\nFor information about custom scripts, click <a href="https://github.com/ukanth/afwall/wiki/CustomScripts">here</a>.</string>
    <string name="custom_script2_info">    	\n<b>Custom shutdown script</b>    	\nYou can also define a custom script to be executed when the firewall is <b>disabled</b>:</string>
    <string name="unsaved_changes">Unsaved changes</string>
    <string name="unsaved_changes_message">You have unsaved changes.\nDo you want to apply or discard them?</string>
    <string name="help_dialog_text"></string>
    <string name="showrules_title">Iptables rules</string>
    <string name="copy">Copy</string>
    <string name="copied">Copied</string>
    <string name="Search">Search</string>
    <string name="flushRulesConfirm">Flush all iptables rules?</string>
    <string name="overrideRules">Do you want to import the rules? This will override the existing rules!</string>
    <string name="notification_new">New app installed</string>
    <string name="notification_new_package">Configure Internet permission</string>
    <string name="confirmMsg">Completely DISABLE the firewall?</string>
    <string name="apply">Apply</string>
    <string name="discard">Discard</string>
    <string name="Cancel">Cancel</string>
    <string name="import_rules_droidwall">Import DroidWall rules</string>
    <string name="export_rules">Export rules only</string>
    <string name="export_all">Export rules, profile settings, and preferences</string>
    <string name="import_rules">Import rules only</string>
    <string name="import_all">Import rules, profile settings, and preferences</string>
    <string name="enable_firewall_log">Enable firewall log</string>
    <string name="enable_firewall_log_service">Turn on log service</string>
    <string name="showlog_title">Firewall Logs</string>
    <string name="showlog_service_summary">Enable to show toast messages when a connection gets blocked </string>
    <string name="block_ipv6_title">delete</string>
    <string name="block_ipv6_summary">delete</string>
    <string name="mp_prefs_title">Profiles</string>
    <string name="custom_title1">Custom name for Default Profile</string>
    <string name="custom_title2">Custom name for Profile 1</string>
    <string name="custom_title3">Custom name for Profile 2</string>
    <string name="custom_title4">Custom name for Profile 3</string>
    <string name="toggle_enable">Enable firewall</string>
    <string name="toggle_disable">Disable firewall</string>
    <string name="toggle_default">Activate default profile</string>
    <string name="toggle_profile1">Activate Profile 1</string>
    <string name="toggle_profile2">Activate Profile 2</string>
    <string name="toggle_profile3">Activate Profile 3</string>
    <string name="multipleProfiles">Multiple profiles</string>
    <string name="defaultProfile">Default</string>
    <string name="profile1">Profile 1</string>
    <string name="profile2">Profile 2</string>
    <string name="profile3">Profile 3</string>
    <string name="lan_title">LAN control</string>
    <string name="lan_summary">Enable to control LAN permissions separately from Wi-Fi permissions</string>
    <string name="iptables_pref">Iptables binary</string>
    <string name="vpn_profile">VPN control</string>
    <string name="vpnSummary">Enable to control VPN permissions separately</string>
    <string name="roaming">Roaming control</string>
    <string name="roamingSummary">Enable to control roaming permissions separately</string>
    <string name="busybox_pref">BusyBox binary</string>
    <string name="XPosed_prefs_title">Xposed Related</string>
    <string name="fixDownloadTitle">Fix DownloadManager leak</string>
    <string name="fixDownloadTitleSummary">Use Xposed to block apps downloading data using Android\'s built-in download manager even if the application is denied access</string>
    <string name="tasker_prefs_title">Tasker Related</string>
    <string name="disable_toaster">Disable Tasker toasts</string>
    <string name="disableTasterSummary">Disable toast messages for Tasker\'s plugin</string>
    <string name="enable_tasker">Enable AFWall+</string>
    <string name="disable_tasker">Disable AFWall+</string>
    <string name="ipv6_title">IPv6 support</string>
    <string name="ipv6_summary">Enable support for IPv6</string>
    <string name="sec_prefs_title">Security</string>
    <string name="exp_prefs_title">Experimental</string>
    <string name="fixleakTitle">Fix startup data leak</string>
    <string name="fixleakSummary">Prevent data leaks during system startup. Your ROM must have init.d or su.d (superSU) support. HTC devices must be configured for S-OFF.</string>
    <string name="enableInboundTitle">Enable inbound connections</string>
    <string name="enableInboundSummary">Allow connections from the LAN to the phone (Samba, sshd, AirDroid, etc.)</string>
    <string name="ui_prefs_title">UI Preferences</string>
    <string name="log_prefs_title">Log</string>
    <string name="languages">Languages</string>
    <string name="change_languages">Change Language</string>
    <string name="active_rules">Active rules</string>
    <string name="active_rules_summary">Apply firewall rules on every connectivity change (LAN/Wi-Fi/mobile-data/roam/tether)</string>
    <string name="multi_apply_rules">Apply rules on profile switch</string>
    <string name="multi_apply_rules_info">Load and apply rules when switching profiles</string>
    <string name="multi_user_title">Enable multi-user support</string>
    <string name="multi_user_summary">Support Android multi-user (only works in mode where selected items are blocked)</string>
    <string name="dns_proxy_title">DNS proxy </string>
    <string name="dns_proxy_summary">DNS lookups are via netd on Android 4.3 and later. Disabling this will block the Internet on those devices.</string>
    <string name="filters_apps_title">Notification filter</string>
    <string name="binaries">Binaries</string>
    <string name="widgets">Widgets</string>
    <string name="exports">Export</string>
    <string name="imports">Import</string>
    <string name="defaultsort">By name (default)</string>
    <string name="lastupdated">By install/update</string>
    <string name="uid">By UID</string>
    <string name="manage_profiles">Manage profiles</string>
    <string name="manage_profiles_summary">Add or remove profiles</string>
    <string name="migrate_profiles">Migrate profiles</string>
    <string name="migrate_summary">Migrate all profile data</string>
    <string name="showlog_toasts">Show toast notification on block</string>
    <string name="enable_show_toasts">Enable show toasts</string>
    <string name="position">Toasts Position</string>
    <string name="menu_legend">Legend</string>
</resources>