<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:key="oldprofile_pref" android:title="@string/mp_prefs_title" >
        <CheckBoxPreference
            android:key="enableMultiProfile"
            android:title="@string/multipleProfiles" />
        <CheckBoxPreference
            android:dependency="enableMultiProfile"
            android:key="applyOnSwitchProfiles"
            android:summary="@string/multi_apply_rules_info"
            android:title="@string/multi_apply_rules" />
        <Preference android:title="@string/manage_profiles"
            android:key="manage_profiles"
            android:summary="@string/manage_profiles_summary"/>
        <EditTextPreference
            android:dependency="enableMultiProfile"
            android:key="default"
            android:summary="@string/custom_title1"
            android:title="@string/defaultProfile" />
        <EditTextPreference
            android:dependency="enableMultiProfile"
            android:key="profile1"
            android:summary="@string/custom_title2"
            android:title="@string/profile1" />
        <EditTextPreference
            android:dependency="enableMultiProfile"
            android:key="profile2"
            android:summary="@string/custom_title3"
            android:title="@string/profile2" />
        <EditTextPreference
            android:dependency="enableMultiProfile"
            android:key="profile3"
            android:summary="@string/custom_title4"
            android:title="@string/profile3" />

        </PreferenceCategory>

    <PreferenceCategory android:key="promigrate"
        android:title="@string/exp_prefs_title" >
        <Preference android:title="@string/migrate_profiles"
            android:key="migrate_profile"
            android:summary="@string/migrate_summary"/>
    </PreferenceCategory>

</PreferenceScreen>