<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/log_prefs_title" >
        <CheckBoxPreference
            android:key="enableLog"
            android:summary="@string/showlog_title"
            android:title="@string/enable_firewall_log" />
      </PreferenceCategory>

    <PreferenceCategory android:title="@string/exp_prefs_title" >
        <CheckBoxPreference
            android:dependency="enableLog"
            android:key="enableLogService"
            android:summary="@string/showlog_service_summary"
            android:title="@string/enable_firewall_log_service" />

        <CheckBoxPreference
            android:dependency="enableLog"
            android:defaultValue="false"
            android:key="showLogToasts"
            android:summary="@string/showlog_toasts"
            android:title="@string/enable_show_toasts" />


        <ListPreference
            android:dependency="enableLog"
            android:defaultValue="bottom"
            android:entries="@array/toast_pos"
            android:entryValues="@array/toast_pos_val"
            android:key="toast_pos"
            android:title="@string/position" >
        </ListPreference>


        <dev.ukanth.ufirewall.log.MultiSelectListPreference
            android:dependency="enableLog"
            android:dialogTitle="@string/filters_apps_title"
            android:key="block_filter_app"
            android:title="@string/filters_apps_title" />
        </PreferenceCategory>



</PreferenceScreen>