<preference-headers
        xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:fragment="dev.ukanth.ufirewall.preferences.UIPreferenceFragment"
        android:title="@string/ui_prefs_title" />
    <header
        android:fragment="dev.ukanth.ufirewall.preferences.LogPreferenceFragment"
        android:title="@string/log_prefs_title" />
    <header
        android:fragment="dev.ukanth.ufirewall.preferences.SecPreferenceFragment"
        android:title="@string/sec_prefs_title" />
    <header
        android:fragment="dev.ukanth.ufirewall.preferences.ExpPreferenceFragment"
        android:title="@string/exp_prefs_title" />
    <header
        android:fragment="dev.ukanth.ufirewall.preferences.MultiProfilePreferenceFragment"
        android:title="@string/mp_prefs_title" />
    <header
        android:fragment="dev.ukanth.ufirewall.preferences.CustomBinaryPreferenceFragment"
        android:title="@string/binaries" />

    <header
        android:fragment="dev.ukanth.ufirewall.preferences.WidgetPreferenceFragment"
        android:title="@string/widgets" />

</preference-headers>