<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/languages">
        <ListPreference
            android:defaultValue="en"
            android:entries="@array/supported_languages"
            android:entryValues="@array/supported_languages_code"
            android:key="locale"
            android:title="@string/change_languages"></ListPreference>

    </PreferenceCategory>



    <PreferenceCategory android:title="@string/tasker_prefs_title">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="disableTaskerToast"
            android:summary="@string/disableTasterSummary"
            android:title="@string/disable_toaster" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/XPosed_prefs_title">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="fixDownloadManagerLeak"
            android:summary="@string/fixDownloadTitleSummary"
            android:title="@string/fixDownloadTitle" />
        <!--<CheckBoxPreference
            android:defaultValue="false"
            android:key="lockScreenNotification"
            android:summary="@string/lockScreenNotification_summary"
            android:title="@string/lockNotification" />
        <CheckBoxPreference
            android:key="fixLeakXPosed"
            android:title="@string/fixleakTitle" />-->

    </PreferenceCategory>

</PreferenceScreen>