<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center" >

    <Button
        android:id="@+id/toggle_enable_firewall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_enable" />

    <Button
        android:id="@+id/toggle_disable_firewall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_disable" />

    <Button
        android:id="@+id/toggle_default_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_default" />

    <Button
        android:id="@+id/toggle_profile1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_profile1" />

    <Button
        android:id="@+id/toggle_profile2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_profile2" />

    <Button
        android:id="@+id/toggle_profile3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_profile3" />

</TableLayout>