<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 <PreferenceCategory android:title="@string/binaries" >
    <ListPreference
        android:defaultValue="auto"
        android:entries="@array/iptables_binary"
        android:entryValues="@array/iptables_binary_path"
        android:key="ip_path"
        android:summary="%s"
        android:title="@string/iptables_pref" >
    </ListPreference>
    <ListPreference
        android:defaultValue="builtin"
        android:entries="@array/busybox_binary"
        android:entryValues="@array/busybox_binary_path"
        android:key="bb_path"
        android:summary="%s"
        android:title="@string/busybox_pref" >
    </ListPreference>
    <ListPreference
        android:defaultValue="auto"
        android:entries="@array/dns_proxy"
        android:entryValues="@array/dns_proxy_values"
        android:key="dns_value"
        android:summary="@string/dns_proxy_summary"
        android:title="@string/dns_proxy_title" >
    </ListPreference>
</PreferenceCategory>
</PreferenceScreen>