<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_action_search"
        android:title=""
        app:showAsAction="always|collapseActionView" />


    <item
        android:id="@+id/menu_mode"
        android:icon="@drawable/ic_playlist_check"
        android:title=""
        app:showAsAction="always">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/allowmode"
                    android:checked="true"
                    android:title="@string/mode_whitelist"
                    app:showAsAction="always"></item>
                <item
                    android:id="@+id/blockmode"
                    android:title="@string/mode_blacklist"
                    app:showAsAction="always"></item>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_sort_variant"
        android:title=""
        app:showAsAction="always">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_default"
                    android:checked="true"
                    android:title="@string/defaultsort"
                    app:showAsAction="always"></item>
                <item
                    android:id="@+id/sort_lastupdate"
                    android:title="@string/lastupdated"
                    app:showAsAction="always"></item>
                <item
                    android:id="@+id/sort_uid"
                    android:title="@string/uid"
                    app:showAsAction="always"></item>
            </group>
        </menu>
    </item>

    <!-- <item
        android:id="@+id/menu_onoff"
        android:actionViewClass="android.widget.Switch"
        app:showAsAction="always"
        android:title=""/>  -->
    <item
        android:id="@+id/menu_list_item"
        android:icon="@drawable/ic_core_overflow"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_toggle"
                android:icon="@drawable/notification"
                android:title=""
                app:showAsAction="always|withText" />
            <item
                android:id="@+id/menu_apply"
                android:icon="@drawable/apply"
                android:title=""
                app:showAsAction="always|withText" />
            <item
                android:id="@+id/menu_log"
                android:icon="@drawable/logs"
                android:title="@string/show_log"
                app:showAsAction="always" />
            <item
                android:id="@+id/menu_rules"
                android:icon="@drawable/rules"
                android:title="@string/showrules"
                app:showAsAction="always" />
            <!--<item
                android:id="@+id/menu_setpwd"
                android:icon="@drawable/lock"
                app:showAsAction="always"
                android:title="@string/setpwd"/>-->
            <item
                android:id="@+id/menu_setcustom"
                android:icon="@drawable/script"
                android:title="@string/set_custom_script"
                app:showAsAction="always" />
            <item
                android:id="@+id/menu_preference"
                android:icon="@drawable/preferences"
                android:title="@string/preferences"
                app:showAsAction="always" />
            <!--<item
                android:id="@+id/menu_reload"
                android:icon="@drawable/reload"
                app:showAsAction="always"
                android:title="@string/reload"/>-->
            <item
                android:id="@+id/menu_export"
                android:icon="@drawable/exportr"
                android:title="@string/exports"
                app:showAsAction="always" />
            <item
                android:id="@+id/menu_import"
                android:icon="@drawable/importr"
                android:title="@string/imports"
                app:showAsAction="always" />
            <item
                android:id="@+id/menu_legend"
                android:icon="@drawable/legend"
                android:title="@string/menu_legend"
                app:showAsAction="always" />
            <item
                android:id="@+id/menu_help"
                android:icon="@drawable/help"
                android:title="@string/help"
                app:showAsAction="always" />
            <item
                android:id="@+id/menu_exit"
                android:icon="@drawable/exit"
                android:title="@string/exit"
                app:showAsAction="always" />
        </menu>
    </item>

</menu>