<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

      <Button
          android:id="@+id/importRules"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          android:text="@string/import_rules"
          android:layout_centerHorizontal="true" />

      <Button
          android:id="@+id/importAll"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/importRules"
          android:layout_alignRight="@+id/importRules"
          android:layout_below="@+id/importRules"
          android:text="@string/import_all" />
      
      <Button
          android:id="@+id/importDW"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/importAll"
          android:layout_alignRight="@+id/importAll"
          android:layout_below="@+id/importAll"
          android:text="@string/import_rules_droidwall" />
      
      
      <Button
          android:id="@+id/cancelImport"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/importDW"
          android:layout_alignRight="@+id/importDW"
          android:layout_below="@+id/importDW"
          android:text="@string/Cancel" />

</RelativeLayout>