<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

      <Button
          android:id="@+id/exportRules"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          android:text="@string/export_rules"
          android:layout_centerHorizontal="true" />

      <Button
          android:id="@+id/exportAll"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/exportRules"
          android:layout_alignRight="@+id/exportRules"
          android:layout_below="@+id/exportRules"
          android:text="@string/export_all" />
      
      <Button
          android:id="@+id/cancelExport"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/exportAll"
          android:layout_alignRight="@+id/exportAll"
          android:layout_below="@+id/exportAll"
          android:text="@string/Cancel" />
      

</RelativeLayout>