<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tasklayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark_material_light"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android">


        <android.support.v7.widget.Toolbar
            android:id="@+id/tasker_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioGroup
                    android:id="@+id/radioProfiles"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="10dp"
                    android:divider="@color/black"
                    android:layout_height="wrap_content" >

                    <RadioButton
                        android:id="@+id/tasker_enable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/enable_tasker" />

                    <RadioButton
                        android:id="@+id/tasker_disable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/disable_tasker" />

                    <RadioButton
                        android:id="@+id/defaultProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/defaultProfile" />

                    <RadioButton
                        android:id="@+id/profile1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/profile1" />

                    <RadioButton
                        android:id="@+id/profile2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/profile2" />

                    <RadioButton
                        android:id="@+id/profile3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/profile3" />
                </RadioGroup>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>